Fix second round of PR review issues